fix: slighly increase header height
42px looks ever so slightly too small and the search bar can get caught up in browser hinting shenanigans
which will make the padding look uneven. 44 is a bit nicer.

--- a/apps/theming/css/default.css
+++ b/apps/theming/css/default.css
@@ -101,7 +101,7 @@
   --clickable-area-small: 24px;
   --default-grid-baseline: 4px;
 
-  --header-height: 42px;
+  --header-height: 44px;
   --header-menu-item-height: 34px;
   /* An alpha mask to be applied to all icons on the navigation bar (header menu).
    * Icons are have a size of 20px but usually we use MDI which have a content of 16px so 2px padding top bottom,
