--- a/core/css/variables.scss
+++ b/core/css/variables.scss
@@ -87,7 +87,7 @@ $animation-quick: 100ms;
 $animation-slow: 300ms;
 
 // various structure data
-$header-height: 42px;
+$header-height: 44px;
 $navigation-width: 300px;
 $sidebar-min-width: 300px;
 $sidebar-max-width: 500px;
